# HydroSAR

./: .gitignore  1-Prepare_Data_Stack.ipynb  1bis-ERA5_Download.ipynb  2-Subset_Data_Stack.ipynb  3-Big_Hand.ipynb  3_Big_Hand_notebook.ipynb  4-Make_Water_Mask.ipynb  5-FIER_LOOP.ipynb  AG30_CV_Agriculture_Extent.ipynb  Big_Hand_notebook.ipynb  CHANGELOG.md  CODE_OF_CONDUCT.md  CV_Jupyter_Notebook_Final.ipynb  ChangeDetection_Niyi.py  Dockerfile  Download_HAND_from_GEE.ipynb  Download_NASADEM.ipynb  FloodMapping-Tweleetal2016-v2.ipynb  Flood_Depth_Estimation_with_Flood_Extent_Maps.ipynb  Flood_Depth_Estimation_with_Flood_Extent_Maps_Lab.ipynb  Flood_Depth_Estimation_with_Flood_Extent_Maps_v0_1_12.ipynb  Flood_Depth_Estimation_with_Flood_Extent_Maps_v0_1_3.ipynb  Flood_Depth_Estimation_with_Flood_Extent_Maps_v0_1_4.ipynb  HYDRO30Workflow-v1.ipynb  HydroSAR_service_archiving.ipynb  HydroSAR_service_archiving_local.ipynb  HydroSAR_service_creating_water_products.ipynb  HydroSAR_service_monitoring.ipynb  LICENSE  Lab3_Flood_Depth_Mapping_Overview.ipynb  LoadData-FullFrame_HyP3_v2.ipynb  LoadHyP3Data-FullFrame.ipynb  MANIFEST.in  README-asf-tools.md  README.md  _config.yml  _toc.yml  a1-Prepare_Data_Stack.ipynb  a2-Subset_Data_Stack.ipynb  a3-Water_Mask.ipynb  (+7 more)
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/workflows/: changelog.yml  deploy.yml  distribute.yml  release.yml  static-analysis.yml  tag-version.yml  tag.yml  test-and-build.yml  test-and-tag.yml
CCD30/: ChangeDetection_Niyi.py  colorUtil.py  prep_images_ChangeDetection_Niyi.py
Old_Notebooks/: Big_Hand_notebook.ipynb  LoadHyP3Data-FullFrame.ipynb  README.md
Other_Notebooks/: Lab3_Flood_Depth_Mapping_Overview.ipynb
binder/: environment.yml
docs/: HydroSAR_service_archiving.ipynb  HydroSAR_service_arhciving.ipynb  HydroSAR_service_creating_water_products.ipynb  HydroSAR_service_monitoring.ipynb  HydroSAR_service_updating.ipynb  OSL_README.md  fier_env.yml  hydrosar-on-demand-requirements.txt  hydrosar-on-demand.yml  hydrosar_env.yml  hydrosar_instructional_env.yml  upload-to-image-services.ipynb
notebooks/: osl-env.yml  osl-readme.md  pgrid.py  water-extent-map-on-demand.ipynb  water-extent-map-sdk.ipynb  water-extent-map-vertex.ipynb  water-extent-map.ipynb
notebooks/instructional/: FIER_4_12_23.ipynb  HYDRO30Workflow-v2.ipynb  Historical_Flood_Depth_to_Extent.ipynb  LoadData-FullFrame_HyP3_v2.ipynb  asf_notebook.py
notebooks/jupyter_book/jupyter_book_content/: CDS_Access.ipynb  ERA5_Download.ipynb  HYDRO30-on-demand.ipynb  HYDRO30_Detailed_Walkthrough.ipynb  HYDRO30_Stack_Processing.ipynb  Prepare_HydroSAR_RTC_Stack.ipynb  Software_Environments.ipynb  Subset_HydroSAR_Stack.ipynb  hydrosar-on-demand.ipynb  start_here.md
notebooks/jupyter_book/jupyter_book_content/util/: util.py
notebooks/jupyter_book/jupyter_book_environment/: hydrosar.yml
notebooks/notebook_archives/: 4-Make_Water_Mask.ipynb  hydrosar.ipynb
notebooks/notebook_archives/instructional/: CV_Jupyter_Notebook_Final.ipynb
notebooks/other/: FloodMapping-Tweleetal2016-v2.ipynb
src/hydrosar/: README.md  __init__.py  __main__.py  flood_map.py  threshold.py  water_map.py
src/hydrosar/data/: water_extent.vrt
src/hydrosar/etc/: entrypoint.sh
src/hydrosar/hand/: __init__.py  calculate.py  prepare.py
tests/: conftest.py  conftest2.py  test_flood_map.py  test_hand.py  test_threshold.py  test_water_map.py
tests/data/: em_thresholds.npz  em_tiles.npz  flood_window.npz  hand_candidates.npz  hand_window.npz
